# AliLLMServer

./: CMakeLists.txt  README.md  main.cpp
include/: Acceptor.hpp  EventLoop.hpp  InetAddress.hpp  LLMApi.hpp  Socket.hpp  SocketIO.hpp  TcpConnection.hpp
python_script/: getReply.py  hello_qwen.py  showPackage.py
source/: Acceptor.cpp  EventLoop.cpp  InetAddress.cpp  Socket.cpp  SocketIO.cpp  TcpConnection.cpp
tests/: testLLMApi  testLLMApi.cpp
